Update icons and manifest

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles.css" rel="stylesheet">
+    <!--Opciones de icono-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/imagenes/icono/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/imagenes/icono/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/imagenes/icono/favicon-16x16.png">
+    <link rel="manifest" href="/imagenes/icono/site.webmanifest">
+    <link rel="mask-icon" href="/imagenes/icono/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!--Fin opciones de icono-->
 </head>
 <body>
 
