added service worker and move scripts

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
     <button type="submit">Enviar</button>
 </form>
 
-<script src="main.js"></script>
+<!--Scripts js-->
+
+<script src="./scripts/main.js"></script>
+
+<!--Script para service worker-->
+<script src="./scripts/companion.js" data-service-worker="./scripts/sw-toolbox.js"></script>
+
+<!--Fin scripts-->
 
 </body>
 </html>
