adjust html for scripting

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script src="./scripts/main.js"></script>
 
 <!--Script para service worker-->
-<script src="./scripts/companion.js" data-service-worker="./scripts/sw-toolbox.js"></script>
+<script src="companion.js" data-service-worker="sw-toolbox.js"></script>
 
 <!--Fin scripts-->
 
